--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,24 +18,7 @@
     "deploy": "npm run build && echo 'Ready for deployment'"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "@reduxjs/toolkit": "^2.2.1",
-    "react-redux": "^9.1.0",
-    "axios": "^1.6.7",
-    "react-hook-form": "^7.51.0",
-    "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.4",
-    "react-query": "^3.39.3",
-    "@tanstack/react-query": "^5.25.0",
-    "framer-motion": "^11.0.8",
-    "react-hot-toast": "^2.4.1",
-    "react-dropzone": "^14.2.3",
-    "react-qrcode-generator": "^1.0.1",
-    "date-fns": "^3.3.1",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -48,36 +31,53 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@sentry/react": "^7.106.1",
+    "@tanstack/react-query": "^5.25.0",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
     "socket.io-client": "^4.7.4",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.0.4",
-    "@sentry/react": "^7.106.1",
-    "react-intersection-observer": "^9.8.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
-    "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.18",
     "cypress": "^13.6.6",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
-    "vitest": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/user-event": "^14.5.2",
-    "jsdom": "^24.0.0"
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">=18.0.0",
