--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,8 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: backend/package.json
       
       - name: Install dependencies
-        working-directory: ./backend
         run: npm ci
       
       - name: Run linter
@@ -79,10 +77,8 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: frontend/package.json
       
       - name: Install dependencies
-        working-directory: ./frontend
         run: npm ci
       
       - name: Run linter
@@ -152,8 +148,7 @@ jobs:
       - name: Start services
         run: docker-compose up -d mongodb redis
       
-      - name: Install backend dependencies
-        working-directory: ./backend
+      - name: Install dependencies
         run: npm ci
       
       - name: Start backend
@@ -167,10 +162,6 @@ jobs:
           npm run build
           npm start &
           sleep 10
-      
-      - name: Install frontend dependencies
-        working-directory: ./frontend
-        run: npm ci
       
       - name: Run E2E tests
         working-directory: ./frontend
