--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@sentry/react": "^7.106.1",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
