--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "Backend API for BillSplit.ai",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "dev": "nodemon src/server.js",
+    "build": "echo 'Build not required for JS'",
+    "start": "node src/server.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts",
